# ModularRAG

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  verify.py
config/: settings.yaml
config/architectures/: adaptive.yaml  advanced.yaml  agentic.yaml  corrective.yaml  graph_rag.yaml  naive.yaml  self_rag.yaml
docs/architectures/: adaptive-rag.md  advanced-rag.md  agentic-rag.md  corrective-rag.md  graph-rag.md  naive-rag.md  self-rag.md
src/core/: embedding.py  llm.py  memory.py  rag_pipeline.py  registry.py  runner.py  vector_store.py
src/core/architectures/: __init__.py  adaptive.py  advanced.py  agentic.py  base.py  corrective.py  graph_rag.py  naive.py  self_rag.py
src/core/components/: __init__.py  embedding.py  llm.py  memory.py  reranker.py  retriever.py  vector_store.py  web_search.py
src/core/guardrails/: __init__.py  base_validator.py  empty_input.py  input_length.py  manager.py  pii_detector.py  prompt_injection.py  special_characters.py  topic_validator.py  toxicity_validator.py  validators.py
src/core/ingestion/: manager.py  processor.py
src/utils/: class_loader.py  config_loader.py  file_utils.py
