[project]
name = "rag-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-huggingface>=1.0.1",
    "langchain-ollama>=1.0.0",
    "langchain-pinecone>=0.2.13",
    "pypdf>=6.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
